--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -410,6 +410,80 @@ p2
 ```
 
 
+## Early vs Late competitors (pre-post ACA?)
+
+```{r}
+
+
+df.ppACA <- df.core2 %>% 
+  mutate(EarlyLate = ifelse(Att == 0, 0, 
+                     ifelse(Att %in% c(2012:2014), 1,# 2))) 
+                     ifelse(Att %in% c(2015:2017), 2, 3))))
+  #filter(Att %in% c(0, 2016:2021) & Year %in% c(2014:2021)) %>% 
+  #filter(Att %in% c(0, 2012:2015) & Year %in% c(2010:2018)) %>% 
+
+
+did.ppACA <- c(0, 0, 0, 0)
+for (i in 1:3){
+for (j in 10:12){
+  
+  df.temp <- df.ppACA[,c(1:9, j, 13:ncol(df.ppACA))]
+  colnames(df.temp)[10] <- "Outcome"
+  outcomes <- did2s(
+      data = df.temp %>% filter(EarlyLate %in% c(0, i)) , 
+      yname = "Outcome", 
+      treatment = "Tx",
+        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year , #Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None | ID + Year , 
+        second_stage = ~ i(Tx, ref = FALSE),
+        cluster_var = "STATE",
+      verbose = TRUE
+    )
+  did.ppACA <- rbind(did.ppACA, outcomes$coeftable)
+}
+}
+
+did.ppACA <- did.ppACA[-1,]
+rownames(did.ppACA) <- NULL
+
+mean.nas<- function(x){ mean(x, na.rm = TRUE)}
+
+options(scipen=999)
+
+
+
+data.frame(Subset = sort(rep(1:3, 3)),
+      Outcome = rep(c("Total","Quality","Financial"), 3),
+      Estimate = as.numeric(did.ppACA[,1]), 
+      SD = as.numeric(did.ppACA[,2])) %>% 
+  mutate(Subset.f = as.factor(Subset)) %>% 
+  ggplot(aes(y = Subset.f, x = Estimate, xmin = Estimate - SD * 1.95, xmax = Estimate + SD * 1.95)) + 
+  geom_point() + 
+  xlab("Staggered 2-way DID Estimates") + 
+ylab(NULL) + 
+#adds the CIs
+geom_errorbarh(height=.1) +
+
+#sets the scales
+#note that I reverse the y axis to correctly order the effect #liquids based on my index variable
+#scale_x_continuous(limits=c(-2.5,1), breaks = c(-2.5:1), name=xname)+
+#scale_y_continuous(name = "", breaks=1:9, labels = t9.forest$X1, trans="reverse")+
+
+#adding a vertical line at the effect = 0 mark
+geom_vline(xintercept=0, color="black", linetype="dashed", alpha=.5)+
+
+#faceting based on my subgroups
+  #facet_wrap(~X1) +
+facet_grid(~Outcome, scales= "free_x", switch = 'y', space = "free_y") +  
+      theme_tufte_revised()+
+   theme(strip.placement = "outside") +
+#theme(text=element_text(family="Times",liquid=12, color="black"))+
+theme(panel.spacing = unit(1, "lines")) + 
+  ggtitle("DID Estimates by early vs late adopters")
+
+```
+
+
+
 ## Effects stratified by profitability
 
 ```{r}
