--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -495,7 +495,7 @@ theme(panel.spacing = unit(1, "lines")) +
 
 splits <- c(mean(dfc[dfc$year.rel == -1,]$ngla_net_gain_loss / dfc[dfc$year.rel == -1,]$ngla_expense, na.rm = TRUE))
 
-splits <- c(-0.03, 0.1)
+#splits <- c(-0.03, 0.1)
 
 df.profit <- dfc %>% 
   mutate(MCD = Total * Pct.MCD / 100, 
@@ -593,7 +593,7 @@ did2s(
       yname = "Qcomp", 
       treatment = "Tx",
         first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless | ID + Year , 
-        second_stage = ~ i(Tx, ref = FALSE) + I(Tx * pc) + I(Tx * pc^2),
+        second_stage = ~ i(Tx, ref = FALSE) + I(Tx * pc) + I(Tx * pc^2) ,
         cluster_var = "STATE",
       verbose = FALSE
     )
