--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -26,6 +26,8 @@ library(did2s)
 library(tidyverse)
 library(directlabels)
 library(gtsummary)
+library(kableExtra)
+library(ggpubr)
 ```
 
 
@@ -316,7 +318,7 @@ df.select.stint <- dfc %>%
          Intensity = (HIV.care + HeartDisease.care + Depression.care + Diabetes.care + Hypertension.care) / 5, 
          Intensity.w = (HIV.care * HIV.prev + HepC.care * HepC.prev + Asthma.care * Asthma.prev + HeartDisease.care * HeartDisease.prev + Depression.care * Depression.prev + Diabetes.care * Diabetes.prev + Hypertension.care * Hypertension.prev) / 
                   (HIV.prev+ HepC.prev + Asthma.prev + HeartDisease.prev + Depression.prev + Diabetes.prev + Hypertension.prev), 
-         PatientsPerStaff = ngla_prog_serv_revenue / Total, #Total / Staff, 
+         PatientsPerStaff = Staff, #Total / Staff, 
          ProgramCostPerPatient = log(ngla_expense / Total)) %>% 
   select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
          Complexity, Intensity, PatientsPerStaff, ProgramCostPerPatient, #HIV.prev:Hypertension.care, pap.denom, crc.denom, adultbmi.denom, childbmi.denom, htn.denom, dm.denom,#MCD:COM, 
@@ -1357,7 +1359,7 @@ for (i in 12:19){
       data = df.temp, 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ Sites | Zip + Year , 
+        first_stage = ~ 1 | Zip + Year , 
         second_stage = ~ i(Tx, ref = FALSE) + as.numeric(Dist / 10) + I(Tx *as.numeric(Dist / 10)),
         cluster_var = "Zip",
       verbose = FALSE
