--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -48,7 +48,8 @@ dfc %>%
   select(Treat, Total, Pct.NHA:Pct.COM) %>% 
   #filter(!complete.cases(.)) %>% 
   tbl_summary(by = Treat, 
-                statistic = list(all_continuous() ~ "{mean} ({sd})")) %>% 
+                statistic = list(all_continuous() ~ "{mean} ({sd})"),
+missing = "no") %>% 
   add_p()
 
 ```
@@ -69,7 +70,8 @@ p <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
   summarise(Count = n()) %>% 
   mutate(CompetitorsInArea = factor(ifelse( Clinics < 4, Clinics - 1, "3+"))) %>% 
   group_by(Year, CompetitorsInArea) %>% 
-  summarise(Count = sum(Count))
+  summarise(Count = sum(Count)) %>% 
+  filter(CompetitorsInArea != "-Inf")
 
 
 plot0 <- p %>% 
@@ -1359,7 +1361,7 @@ for (i in 12:19){
       data = df.temp, 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ 1 | Zip + Year , 
+        first_stage = ~ Sites | Zip + Year , 
         second_stage = ~ i(Tx, ref = FALSE) + as.numeric(Dist / 10) + I(Tx *as.numeric(Dist / 10)),
         cluster_var = "Zip",
       verbose = FALSE
@@ -1404,6 +1406,16 @@ rownames(did.access.figures) <- NULL
  
 summary(df.spill3[df.spill3$Att > 0 & df.spill3$Att.viz < df.spill3$Year,]$Unins.rate * df.spill3[df.spill3$Att > 0& df.spill3$Att.viz < df.spill3$Year,]$TotalPop)
  
+
+did2s(
+      data = df.spill3 %>% mutate(clust = substr(Zip, 1, 3)), 
+      yname = "Sites", 
+      treatment = "Tx",
+        first_stage = ~ 1 | Zip + Year , 
+        second_stage = ~ i(Tx, ref = FALSE) + as.numeric(Dist / 10) + I(Tx *as.numeric(Dist / 10)) ,
+        cluster_var = "clust",
+      verbose = FALSE
+    )
  
 ```
 
