--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -28,6 +28,7 @@ library(directlabels)
 library(gtsummary)
 library(kableExtra)
 library(ggpubr)
+library(tigris)
 ```
 
 
@@ -35,8 +36,11 @@ library(ggpubr)
 ```{r}
 # dfc <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/analyticalfile.csv")
 # uds.sites.full <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/sites_geocoded.csv")
-
-
+# clinics.in.zips <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
+#   #filter(Year >= included.years[1]) %>% 
+#   group_by(Zip, Year) %>%
+#   summarise(Clinics = n_distinct(`BHCMIS ID`), Sites = n()) %>%
+#   arrange(desc(Clinics))
 ```
 
 ## Balance between treated and controls
@@ -904,12 +908,9 @@ event_study(data = dfc.new %>% left_join(dfc %>% select(ID, Year, Pct.NHA:Pct.CO
 ```{r}
 
 ## Treatment vs control, only in zip code of interest
-df.z <- left_join(dfc #%>% filter(`Grant Number` != "H80CS00225")
-                  , #uds.zip %>% mutate(Zip = `Zip Code`) %>% select(`Grant Number`, Zip) %>% unique() , by = c("Grant Number")) %>%
-                  uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
-                    filter(Year %in% c(2010:2021)) %>% 
-              select(`BHCMIS ID`, Zip) %>%
-              unique() %>% filter(!is.na(Zip)), by = c("BHCMIS ID")) %>%
+df.z <- left_join(dfc, 
+                  #uds.zip %>% mutate(Zip = `ZipCode`) %>% select(`BHCMISID`, Zip) %>% unique() , by = c("BHCMIS ID" = "BHCMISID")) %>%
+                  uds.sites.full[!is.na(uds.sites.full$Zip),] %>% filter(Year %in% c(2010:2021)) %>% select(`BHCMIS ID`, Zip) %>% unique() %>% filter(!is.na(Zip)), by = c("BHCMIS ID")) %>%
   left_join(uds.zip, by = c("BHCMIS ID" = "BHCMISID", "Year" = "ReportingYear", "Zip" = "ZipCode")) %>%
   filter(!is.na(GrantNumber)) %>% 
   left_join(clinics.in.zips %>% select(Zip:Clinics), by = c("Zip","Year")) %>%
@@ -948,7 +949,6 @@ df.z.full <- df.z %>% ############## NOTE: Original +500 effect was recoved with
 
 df.zip.1 <- df.z %>% select(ID, Year, Att, NumberofPatients)
 df.zip.2 <- df.z.full %>% select(ID, Year, Att.z, Total.z:Quality.z)
-
 
 
 ```
@@ -1318,14 +1318,17 @@ suppressWarnings(print(p.spill))
 
 
 
-
 ## NumberofPatients and Total.Hours are the best cases, controlling for Sites
 ```{r}
+
+
+
 
 zipsize2 <- zctas(starts_with = unique(c(df.spill2$Zip)), year = 2010)
 
 
-df.spill3 <- df.spill2 %>% 
+df.spill3 <- df.spill2 %>% filter(NumberofPatients > 50) %>% 
+  
   left_join(census %>% 
               mutate(Unins.rate = Uninsured / Unins.denom) %>% 
               select(ZipCode, YEAR, TotalPop, IncomeBelowPoverty, PovertyStatusDet, Unins.rate), by = c("Year" = "YEAR", "Zip" = "ZipCode")) %>% 
@@ -1339,13 +1342,13 @@ df.spill3 <- df.spill2 %>%
   #        Hispanic = Hispanic / TotalPop)
 
  i <- 10
-  df.temp <- df.spill3[,c(1:5, 11, i, 16:ncol(df.spill3))]
-  names(df.temp)[1:7] <- c("Tx", "D", "Dist", "Year", "Zip", "Sites", 'Outcome')
+  df.temp <- df.spill3[,c(1:5, i, 16:ncol(df.spill3))]
+  names(df.temp)[1:7] <- c("Tx", "D", "Dist", "Year", "Zip", 'Outcome')
   model_feols_clustered <- did2s(
       data = df.temp, 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ Sites | Zip + Year , 
+        first_stage = ~ 1 | Zip + Year , 
         second_stage = ~ i(Tx, ref = FALSE) + as.numeric(Dist / 10) + I(Tx *as.numeric(Dist / 10)) ,
         cluster_var = "Zip",
       verbose = FALSE
@@ -1354,14 +1357,14 @@ df.spill3 <- df.spill2 %>%
   TEs_Dist <- data.frame(model_feols_clustered$coeftable)[nrow(model_feols_clustered$coeftable),]
 
 
-for (i in 12:19){
-  df.temp <- df.spill3[,c(1:5, 11, i, 16:ncol(df.spill3))]
-  names(df.temp)[1:7] <- c("Tx", "D", "Dist", "Year", "Zip", "Sites", 'Outcome')
+for (i in 11:19){
+  df.temp <- df.spill3[,c(1:5, i, 16:ncol(df.spill3))]
+  names(df.temp)[1:7] <- c("Tx", "D", "Dist", "Year", "Zip", 'Outcome')
   model_feols_clustered <- did2s(
       data = df.temp, 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ Sites | Zip + Year , 
+        first_stage = ~ 1 | Zip + Year , 
         second_stage = ~ i(Tx, ref = FALSE) + as.numeric(Dist / 10) + I(Tx *as.numeric(Dist / 10)),
         cluster_var = "Zip",
       verbose = FALSE
@@ -1377,7 +1380,7 @@ did.access.figures <- df.spill3 %>%
     mutate(Post = ifelse(Att.viz >= Year, 1, 0), 
          Treated = ifelse(Att > 0, 1, 0)) %>% 
   group_by(Post, Treated) %>% 
-  select(Total.Hours, Perminance:Private) %>% 
+  select(Total.Hours:Private) %>% 
   summarise_all(mean.nas) %>% 
   # summarise(Total = mean(Total, na.rm = TRUE), 
   #           Quality = mean(Qcomp, na.rm = TRUE), 
@@ -1387,14 +1390,14 @@ did.access.figures <- df.spill3 %>%
   #filter(name %in% c("Total", "Qcomp", "Altman")) %>% 
   pivot_wider(id_cols = name, names_from = c(Treated, Post), values_from = value) %>% 
   mutate(Unadjusted = (`1_1` - `1_0`) - (`0_1` - `0_0`)) %>% 
-  cbind(Outcome = c("Hours Per Week","Perminance","Weekly Schedule","Calendar Schedule","Total","Uninsured","Medicaid","Medicare","Private")) %>% 
+  cbind(Outcome = c("Hours Per Week","Locations","Perminance","Weekly Schedule","Calendar Schedule","Total","Uninsured","Medicaid","Medicare","Private")) %>% 
   select(Outcome, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted) %>% 
   cbind(TEs %>% mutate(Estimate = round(Estimate, 2), `95% CI` = paste(round(Estimate - 1.96 * `Std..Error`, 2), ", ", round(Estimate + 1.96 * `Std..Error`, 2), sep = "")) %>% select(Estimate, `95% CI`)) %>% 
   cbind(TEs_Dist %>% mutate(Estimate = round(Estimate, 2), `95% CI` = paste(round(Estimate - 1.96 * `Std..Error`, 2), ", ", round(Estimate + 1.96 * `Std..Error`, 2), sep = "")) %>% select(Estimate, `95% CI`))
 
 
 
-did.access.figures <- did.access.figures[c(5:9, 1, 3, 2, 4),]
+did.access.figures <- did.access.figures[c(6:10, 1:5),]
 rownames(did.access.figures) <- NULL
 
  did.access.figures %>% 
@@ -1402,20 +1405,29 @@ rownames(did.access.figures) <- NULL
   kable_styling(latex_options = c("striped")) %>%
   pack_rows(index = c("Patients" = 5, "Access" = 4)) %>% 
   add_header_above(c(" " = 1, "Control" = 2, "Treated" = 2, " " = 1, "TE" = 2,"TE * Distance" = 2))
+ 
+ 
+did.access.figures[,c(1, 7:10)] %>% 
+  kable("html", booktabs = T, col.names = c("Outcome","Estimate","95% CI","Estimate","95% CI")) %>% 
+  kable_styling(latex_options = c("striped")) %>%
+  pack_rows(index = c("Patients" = 5, "Access" = 4)) %>% 
+  add_header_above(c(" " = 1, "TE (Intercept)" = 2,"TE * Distance (Slope)" = 2))
 
  
 summary(df.spill3[df.spill3$Att > 0 & df.spill3$Att.viz < df.spill3$Year,]$Unins.rate * df.spill3[df.spill3$Att > 0& df.spill3$Att.viz < df.spill3$Year,]$TotalPop)
  
 
-did2s(
-      data = df.spill3 %>% mutate(clust = substr(Zip, 1, 3)), 
-      yname = "Sites", 
-      treatment = "Tx",
-        first_stage = ~ 1 | Zip + Year , 
-        second_stage = ~ i(Tx, ref = FALSE) + as.numeric(Dist / 10) + I(Tx *as.numeric(Dist / 10)) ,
-        cluster_var = "clust",
-      verbose = FALSE
-    )
+
+event_study(data = df.spill3, 
+  yname = "Medicaid", idname = "Zip", tname = "Year", gname = "Att", estimator = "all") %>% 
+  filter(abs(term) <= 7) %>% 
+  #filter(estimator %in% c("Gardner (2021)")) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Total Patients")
+  
+
  
 ```
 
@@ -1665,7 +1677,6 @@ df.p %>%
 
 
 ```
-
 
 
 
