--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -1335,7 +1335,7 @@ df.spill3 <- df.spill2 %>% filter(NumberofPatients > 50) %>%
   left_join(zipsize2 %>% select(GEOID10, ALAND10), by = c("Zip" = "GEOID10")) %>% 
   mutate(Area.SQmiles = ALAND10 / 2.59e6, 
          l.popdensity = log(TotalPop / Area.SQmiles)) %>% 
-  mutate(Poverty = IncomeBelowPoverty / PovertyStatusDet)
+  mutate(Poverty = IncomeBelowPoverty / PovertyStatusDet) #%>% filter(Zip != '04401')
 # ,
 #          Unemployed = Unemployed / Unemp_denom,
 #          Elderly = Age65andOver / TotalPop,
@@ -1346,7 +1346,7 @@ df.spill3 <- df.spill2 %>% filter(NumberofPatients > 50) %>%
   df.temp <- df.spill3[,c(1:5, i, 16:ncol(df.spill3))]
   names(df.temp)[1:7] <- c("Tx", "D", "Dist", "Year", "Zip", 'Outcome')
   model_feols_clustered <- did2s(
-      data = df.temp, 
+      data = df.temp , 
       yname = "Outcome", 
       treatment = "Tx",
         first_stage = ~ 1 | Zip + Year , 
@@ -1362,7 +1362,7 @@ for (i in 11:19){
   df.temp <- df.spill3[,c(1:5, i, 16:ncol(df.spill3))]
   names(df.temp)[1:7] <- c("Tx", "D", "Dist", "Year", "Zip", 'Outcome')
   model_feols_clustered <- did2s(
-      data = df.temp, 
+      data = df.temp , 
       yname = "Outcome", 
       treatment = "Tx",
         first_stage = ~ 1 | Zip + Year , 
@@ -1427,9 +1427,47 @@ event_study(data = df.spill3,
   #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
   theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
   geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) + ggtitle("Total Patients")
-  
+```
 
+
+
+
+## Access by quantile
+```{r}
+qnats1 <- c(0, 0.2, 0.4, 0.6, 0.8)
+qnats2 <- c(0.2, 0.4, 0.6, 0.8, 1)
+
+qnats1 <- seq(0, 0.8, by = 0.2)
+qnats2 <- seq(0.2, 1, by = 0.2)
  
+   model.dist.quants <-  did2s(
+      data = df.spill3 %>% filter(Dist > quantile(Dist, qnats1[1]) & Dist < quantile(Dist, qnats2[1])), 
+      yname = "Total.Hours", 
+      treatment = "Tx",
+        first_stage = ~ 1 | Zip + Year , 
+        second_stage = ~ i(Tx, ref = FALSE)  ,
+        cluster_var = "Zip",
+      verbose = FALSE
+    )
+    TEs <- data.frame(model.dist.quants$coeftable)[1,]
+    
+    
+  for (i in 2:5){
+      model.dist.quants <-  did2s(
+      data = df.spill3 %>% filter(Dist > quantile(Dist, qnats1[i]) & Dist < quantile(Dist, qnats2[i])), 
+      yname = "Total.Hours", 
+      treatment = "Tx",
+        first_stage = ~ 1 | Zip + Year , 
+        second_stage = ~ i(Tx, ref = FALSE)  ,
+        cluster_var = "Zip",
+      verbose = FALSE
+    ) 
+      TEs <- rbind(TEs, data.frame(model.dist.quants$coeftable)[1,])
+  }
+    
+    TEs
+    
+    df.spill3 %>% filter(Zip != '04401')
 ```
 
 
@@ -1635,12 +1673,12 @@ df.p %>%
          ycoor = ycoor / Radius, 
          popcenter.x = popcenter.x / Radius, 
          popcenter.y = popcenter.y / Radius) %>% 
-  filter(Zip == "43604") %>%  #43604
+ #filter(Zip == "43604") %>%  #43604
   ggplot(aes(x = xcoor, y = ycoor, color = ClinicType)) + 
   #geom_rect(aes(xmin = -SquareSide / 2, xmax = SquareSide / 2, ymin = -SquareSide / 2, ymax = SquareSide / 2), fill = "blue", alpha = 0.2, color = NA) + 
   geom_rect(aes(xmin = -1, xmax = 1, ymin = -1, ymax = 1), fill = "lightgrey", alpha = 0.2, color = NA) + 
   geom_point(position=position_jitter(width=0.05, height=0.05)) + xlim(-2, 2) + ylim(-2, 2) + 
-  geom_point(aes(x = popcenter.x, y = popcenter.y), color = "green") #+ facet_wrap(~Zip)
+  geom_point(aes(x = popcenter.x, y = popcenter.y), color = "green") + facet_wrap(~Zip)
 
 
 
